--- a/strategy.html
+++ b/strategy.html
@@ -55,6 +55,7 @@ body {
 
 <body>
 <div class='linkbar'>
+<a class="sbpage" href="index.html">Etusivu: ChatGPT-suunnittelumallikirja</a>
 <a class="sbpage" href="abstract_factory.html">Abstract Factory -suunnittelumalli</a>
 <a class="sbpage" href="adapter.html">Adapter-suunnittelumalli</a>
 <a class="sbpage" href="bridge.html">Bridge-suunnittelumalli</a>
