--- a/proxy.html
+++ b/proxy.html
@@ -4,7 +4,7 @@
 <title>
 Proxy-suunnittelumalli
 </title>
-<link rel="stylesheet" href="../pygments.css">
+<link rel="stylesheet" href="pygments.css">
 
 <style type='text/css'>
 body {
