--- a/dependency_injection.html
+++ b/dependency_injection.html
@@ -4,7 +4,7 @@
 <title>
 Dependency Injection
 </title>
-<link rel="stylesheet" href="../pygments.css">
+<link rel="stylesheet" href="pygments.css">
 
 <style type='text/css'>
 body {
