--- a/lazy_initialization.html
+++ b/lazy_initialization.html
@@ -4,7 +4,7 @@
 <title>
 Lazy Initialization
 </title>
-<link rel="stylesheet" href="../pygments.css">
+<link rel="stylesheet" href="pygments.css">
 
 <style type='text/css'>
 body {
