Tarkennus sivun tarkoitusperiin

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
 </div>
 <div id="content">
 <h1 id="etusivu-chatgpt-suunnittelumallikirja">Etusivu: ChatGPT-suunnittelumallikirja</h1>
-<p>Tein tällaisen mallikirjan tuolla ChatGPT:n ilmaisversiolla, koska se on nopea ja suoraviivainen.</p>
+<p>Tein tällaisen mallikirjan tuolla ChatGPT:n ilmaisversiolla, koska se on nopea ja suoraviivainen. Ja mulla on toi Olio-ohjelmoinnin suunnittelumallit -kirja (Design Patterns), mutta teksti on ihan pikkiriikkistä enkä pysty lukemaan sitä.</p>
 </div>
 </body>
 </html>
