--- a/facade.html
+++ b/facade.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>
-Facade-suunnittelumalli
+Facade
 </title>
 <link rel="stylesheet" href="pygments.css">
 
@@ -49,36 +49,77 @@ body {
    width: 40em;
    max-width: 70%;
 }
+
+td, th {
+   text-align: left;
+   vertical-align: top;
+   outline: 1px solid #333;
+   padding: 0.5em;
+}
 </style>
 
 </head>
 
 <body>
 <div class='linkbar'>
-<a class="sbpage" href="index.html">Etusivu: ChatGPT-suunnittelumallikirja</a>
-<a class="sbpage" href="abstract_factory.html">Abstract Factory -suunnittelumalli</a>
-<a class="sbpage" href="adapter.html">Adapter-suunnittelumalli</a>
-<a class="sbpage" href="bridge.html">Bridge-suunnittelumalli</a>
-<a class="sbpage" href="builder.html">Builder-suunnittelumalli</a>
-<a class="sbpage" href="chain_of_responsibility.html">Chain of Responsibility -suunnittelumalli</a>
-<a class="sbpage" href="command.html">Command-suunnittelumalli</a>
-<a class="sbpage" href="composite.html">Composite-suunnittelumalli</a>
-<a class="sbpage" href="decorator.html">Decorator-suunnittelumalli</a>
+<a class="sbpage" href="index.html">Etusivu: ChatGPT-kirja suunnittelumalleista</a>
+<a class="sbpage" href="abstract_factory.html">Abstract Factory </a>
+<a class="sbpage" href="active_object.html">Active Object </a>
+<a class="sbpage" href="adapter.html">Adapter</a>
+<a class="sbpage" href="balking.html">Balking</a>
+<a class="sbpage" href="binding_properties.html">Binding Properties </a>
+<a class="sbpage" href="bridge.html">Bridge</a>
+<a class="sbpage" href="builder.html">Builder</a>
+<a class="sbpage" href="chain_of_responsibility.html">Chain of Responsibility </a>
+<a class="sbpage" href="command.html">Command</a>
+<a class="sbpage" href="composite.html">Composite</a>
+<a class="sbpage" href="compute_kernel.html">Compute Kernel </a>
+<a class="sbpage" href="cpu_atomic_operation.html">CPU Atomic Operation </a>
+<a class="sbpage" href="decorator.html">Decorator</a>
+<a class="sbpage" href="delegate.html">Delegation</a>
 <a class="sbpage" href="dependency_injection.html">Dependency Injection</a>
-<a class="sbpage" href="facade.html">Facade-suunnittelumalli</a>
-<a class="sbpage" href="factory_method.html">Factory Method -suunnittelumalli</a>
-<a class="sbpage" href="flyweight.html">Flyweight-suunnittelumalli</a>
-<a class="sbpage" href="interpreter.html">Interpreter-suunnittelumalli</a>
-<a class="sbpage" href="iterator.html">Iterator-suunnittelumalli</a>
+<a class="sbpage" href="doublechecked_locking.html">Double-Checked Locking </a>
+<a class="sbpage" href="eventbased_asynchronous.html">Event-based Asynchronous </a>
+<a class="sbpage" href="extension_object.html">Extension Object </a>
+<a class="sbpage" href="facade.html">Facade</a>
+<a class="sbpage" href="factory_method.html">Factory Method </a>
+<a class="sbpage" href="fluent_interface.html">Fluent Interface </a>
+<a class="sbpage" href="flyweight.html">Flyweight</a>
+<a class="sbpage" href="front_controller.html">Front Controller </a>
+<a class="sbpage" href="guarded_suspension.html">Guarded Suspension </a>
+<a class="sbpage" href="interpreter.html">Interpreter</a>
+<a class="sbpage" href="iterator.html">Iterator</a>
+<a class="sbpage" href="join.html">Join</a>
 <a class="sbpage" href="lazy_initialization.html">Lazy Initialization</a>
-<a class="sbpage" href="mediator.html">Mediator-suunnittelumalli</a>
-<a class="sbpage" href="observer.html">Observer-suunnittelumalli</a>
-<a class="sbpage" href="prototype.html">Prototype-suunnittelumalli</a>
-<a class="sbpage" href="proxy.html">Proxy-suunnittelumalli</a>
-<a class="sbpage" href="singleton.html">Singleton-suunnittelumalli</a>
-<a class="sbpage" href="state.html">State-suunnittelumalli</a>
-<a class="sbpage" href="strategy.html">Strategy-suunnittelumalli</a>
-<a class="sbpage" href="visitor.html">Visitor-suunnittelumalli</a>
+<a class="sbpage" href="lock.html">Lock</a>
+<a class="sbpage" href="marker.html">Marker</a>
+<a class="sbpage" href="mediator.html">Mediator</a>
+<a class="sbpage" href="memento.html">Memento</a>
+<a class="sbpage" href="messaging.html">Messaging</a>
+<a class="sbpage" href="module.html">Module</a>
+<a class="sbpage" href="monitor_object.html">Monitor Object </a>
+<a class="sbpage" href="multiton.html">Multiton</a>
+<a class="sbpage" href="mvc.html">MVC</a>
+<a class="sbpage" href="null_object.html">Null Object </a>
+<a class="sbpage" href="object_pool.html">Object Pool </a>
+<a class="sbpage" href="observer.html">Observer</a>
+<a class="sbpage" href="prototype.html">Prototype</a>
+<a class="sbpage" href="proxy.html">Proxy</a>
+<a class="sbpage" href="raii.html">RAII</a>
+<a class="sbpage" href="reactor.html">Reactor</a>
+<a class="sbpage" href="readwrite_lock.html">Read-write Lock </a>
+<a class="sbpage" href="scheduler.html">Scheduler </a>
+<a class="sbpage" href="scweo.html">Safe Concurrency With Exclusive Ownership </a>
+<a class="sbpage" href="servant.html">Servant</a>
+<a class="sbpage" href="service_handler.html">Service Handler </a>
+<a class="sbpage" href="service_locator.html">Service Locator </a>
+<a class="sbpage" href="singleton.html">Singleton</a>
+<a class="sbpage" href="state.html">State</a>
+<a class="sbpage" href="strategy.html">Strategy</a>
+<a class="sbpage" href="thread_pool.html">Thread Pool </a>
+<a class="sbpage" href="threadspecific_storage.html">Thread-specific Storage </a>
+<a class="sbpage" href="twin.html">Twin</a>
+<a class="sbpage" href="visitor.html">Visitor</a>
 
 </div>
 <div id="content">
