--- a/facade.html
+++ b/facade.html
@@ -224,7 +224,7 @@ Toistetaan elokuva: Matrix
 
 <h3 id="kayttokohteita-facade-mallille">Käyttökohteita Facade-mallille</h3>
 <ul>
-<li><strong>Kirjastojen käyttöliittymät:</strong> piilotetaan monimutkaiset API\:t (esim. grafiikka, ääni, verkkopyynnöt).</li>
+<li><strong>Kirjastojen käyttöliittymät:</strong> piilotetaan monimutkaiset API:t (esim. grafiikka, ääni, verkkopyynnöt).</li>
 <li><strong>Sovelluskerrokset:</strong> esimerkiksi web-sovelluksissa controller kutsuu palvelukerroksen tarjoamaa Facadea.</li>
 <li><strong>Monimutkaiset alustat:</strong> esim. pelimoottorit, kotiautomaatio, tietokantajärjestelmät.</li>
 <li><strong>Testaus:</strong> mahdollistaa monimutkaisen järjestelmän simuloimisen yksinkertaisella rajapinnalla.</li>
