--- a/factory_method.html
+++ b/factory_method.html
@@ -307,7 +307,7 @@ Web-nappi: Piirretään nappi HTML/CSS-tyyliin.
 </tr>
 <tr>
 <td>Sovelluskohteet</td>
-<td>UI-komponentit, pelilogiikka, API\:t, alustariippuva koodi</td>
+<td>UI-komponentit, pelilogiikka, API:t, alustariippuva koodi</td>
 </tr>
 </tbody>
 </table>
