--- a/front_controller.html
+++ b/front_controller.html
@@ -323,7 +323,7 @@ Käsitellään pyyntö: /unknown
 <h2 id="kayttokohteita">Käyttökohteita</h2>
 <ul>
 <li>Web-frameworkit</li>
-<li>REST-API\:t</li>
+<li>REST-API:t</li>
 <li>Botit (esim. Discord-botit)</li>
 <li>Komentopohjaiset CLI-sovellukset, joissa komennot reititetään keskitetysti</li>
 </ul>
