--- a/iterator.html
+++ b/iterator.html
@@ -281,7 +281,7 @@ td, th {
 <li><strong>Kokoelmien läpikäynti (listat, puut, graafit)</strong></li>
 <li><strong>Tiedostojen rivikohtainen lukeminen</strong></li>
 <li><strong>Tulosjoukkojen suodatus, lajittelu tai rajaus</strong></li>
-<li><strong>Rajapinnat ja API\:t, jotka palauttavat tuloksia erissä</strong></li>
+<li><strong>Rajapinnat ja API:t, jotka palauttavat tuloksia erissä</strong></li>
 </ul>
 <h2 id="yhteenveto">Yhteenveto</h2>
 <table>
