--- a/marker.html
+++ b/marker.html
@@ -222,7 +222,7 @@ td, th {
 ✅ Toimii hyvin tyypityksen ja introspektion kanssa<br />
 ✅ Pythonissa helppo laajentaa myös dekoraattorilla</p>
 <h2 id="haitat">Haitat</h2>
-<p>⚠️ Ei tarjoa mitään toiminnallista API\:a<br />
+<p>⚠️ Ei tarjoa mitään toiminnallista API:a<br />
 ⚠️ Voi olla vaikea hahmottaa, jos luokilla ei ole näkyvää sisältöä<br />
 ⚠️ Ei suojaa väärinkäytöltä, jos luokkaa &ldquo;merkitään&rdquo; ilman tarkoitusta</p>
 <h2 id="yhteenveto">Yhteenveto</h2>
