--- a/mvc.html
+++ b/mvc.html
@@ -134,7 +134,7 @@ td, th {
 <blockquote>
 <p><strong>Tarkoitus:</strong> Erotella sovelluksen eri vastuut selkeästi, jotta koodia on helpompi kehittää, testata ja ylläpitää.</p>
 </blockquote>
-<h3 id="mvcn-rakenne">MVC\:n rakenne</h3>
+<h3 id="mvcn-rakenne">MVC:n rakenne</h3>
 <div class="codehilite"><pre><span></span><code>Käyttäjä
    ↓
 Controller ───→ päivittää → Model
@@ -214,7 +214,7 @@ päivittää               |
 <span class="nv">Komento</span><span class="w"> </span><span class="ss">(</span><span class="nv">add</span><span class="o">/</span><span class="nv">sub</span><span class="o">/</span><span class="k">exit</span><span class="ss">)</span>:<span class="w"> </span><span class="k">exit</span>
 </code></pre></div>
 
-<h2 id="mvcn-hyodyt-ja-haitat">MVC\:n hyödyt ja haitat</h2>
+<h2 id="mvcn-hyodyt-ja-haitat">MVC:n hyödyt ja haitat</h2>
 <table>
 <thead>
 <tr>
