--- a/raii.html
+++ b/raii.html
@@ -133,7 +133,7 @@ td, th {
 <blockquote>
 <p><strong>Tarkoitus:</strong> Varmistaa, että resurssit kuten tiedostot, lukitukset tai yhteydet vapautetaan automaattisesti ja turvallisesti.</p>
 </blockquote>
-<h3 id="raii-cssa-vs-pythonissa">RAII C++\:ssa vs Pythonissa</h3>
+<h3 id="raii-cssa-vs-pythonissa">RAII C++:ssa vs Pythonissa</h3>
 <table>
 <thead>
 <tr>
