--- a/reactor.html
+++ b/reactor.html
@@ -313,7 +313,7 @@ Tarjota tehokas ja skaalautuva malli suurien määrien samanaikaisten I/O-tapaht
 </tr>
 <tr>
 <td>Sovellukset</td>
-<td>Palvelimet, UI\:t, reaktiiviset sovellukset</td>
+<td>Palvelimet, UI:t, reaktiiviset sovellukset</td>
 </tr>
 <tr>
 <td>Python-työkalut</td>
