--- a/visitor.html
+++ b/visitor.html
@@ -305,7 +305,7 @@ td, th {
 </tr>
 <tr>
 <td>Sovelluskohteet</td>
-<td>AST\:t, dokumenttirakenteet, tiedostojärjestelmät, analyysit</td>
+<td>AST:t, dokumenttirakenteet, tiedostojärjestelmät, analyysit</td>
 </tr>
 <tr>
 <td>Tuki Pythonissa</td>
